--- a/index.html
+++ b/index.html
@@ -2,24 +2,37 @@
 <html>
 <head>
 	<title>module2 solution</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Our menu</h1>
-	<section>
-		Chicken
+	<div id="container" class="row">
+		<div class="col-lg-4 col-md-6 col-sm-12">			
 
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porttitor libero elit, ut fringilla lectus tincidunt non. Vestibulum et interdum tellus, in mattis justo. Suspendisse varius leo non neque cursus faucibus pellentesque nec turpis. Donec euismod, neque at eleifend posuere, nulla diam consequat risus, et varius neque risus scelerisque nisi. Nam eros mi, eleifend vitae blandit non, hendrerit rhoncus purus. Pellentesque vitae dui id risus pellentesque ullamcorper. Nullam placerat orci nec ex aliquet, eu aliquet nisl aliquet. Nunc mattis velit eu condimentum feugiat. Donec sit amet mi in tellus viverra euismod. Nullam pharetra maximus lorem varius fringilla. Sed a massa in sem aliquam tempor. Nulla at elit magna.
-	</section>>
-		
-	<section>
-		Beef
-		Mauris magna erat, ornare vel neque id, maximus sagittis elit. Integer cursus tellus vitae dui mollis, id rhoncus magna tempor. Vivamus eu nibh faucibus, pulvinar nunc ut, porttitor lorem. Nullam id sollicitudin ligula, vel facilisis nibh. Pellentesque at condimentum ex. Phasellus convallis, lorem ut vehicula egestas, sapien augue molestie tellus, nec dapibus dui purus non ex. Praesent mattis justo sed lectus dignissim gravida sit amet nec sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris et volutpat enim. Sed iaculis augue faucibus eros tempor maximus. Nulla vestibulum est ante, nec semper velit molestie et. Curabitur rutrum, neque vel dictum facilisis, ante sapien volutpat nibh, at accumsan dui elit nec arcu. Nullam interdum odio ac ullamcorper ornare. Etiam eleifend libero a libero condimentum, eget cursus tortor tempor. Sed porttitor fringilla magna.
-	</section>>
-		
-	<section>
-		Sushi
-		Mauris mollis egestas rhoncus. Ut molestie mauris pharetra tortor sagittis finibus. Nulla dictum condimentum metus, et tristique dolor posuere quis. Cras dui sapien, condimentum et nisi vel, malesuada vulputate arcu. Vivamus dapibus vehicula mi, mollis rhoncus velit gravida at. Nulla sit amet fringilla augue, eget tincidunt est. Curabitur porta consectetur pharetra. Praesent luctus eros velit, a dictum justo ullamcorper ac. Nam euismod finibus sagittis.
-	</section>>
-		
+			<section>
+				<h2 id="one">Chicken</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porttitor libero elit, ut fringilla lectus tincidunt non. Vestibulum et interdum tellus, in mattis justo. Suspendisse varius leo non neque cursus faucibus pellentesque nec turpis. Donec euismod, neque at eleifend posuere, nulla diam consequat risus, et varius neque risus scelerisque nisi. Nam eros mi, eleifend vitae blandit non, hendrerit rhoncus purus. Pellentesque vitae dui id risus pellentesque ullamcorper. Nullam placerat orci nec ex aliquet, eu aliquet nisl aliquet. Nunc mattis velit eu condimentum feugiat. Donec sit amet mi in tellus viverra euismod. Nullam pharetra maximus lorem varius fringilla. Sed a massa in sem aliquam tempor. Nulla at elit magna.</p>
+			</section>
+		</div>
+			
+		<div class="col-lg-4 col-md-6 col-sm-12">
+
+			<section>
+				<h2 id="two">Beef</h2>
+				<p>Mauris magna erat, ornare vel neque id, maximus sagittis elit. Integer cursus tellus vitae dui mollis, id rhoncus magna tempor. Vivamus eu nibh faucibus, pulvinar nunc ut, porttitor lorem. Nullam id sollicitudin ligula, vel facilisis nibh. Pellentesque at condimentum ex. Phasellus convallis, lorem ut vehicula egestas, sapien augue molestie tellus, nec dapibus dui purus non ex. Praesent mattis justo sed lectus dignissim gravida sit amet nec sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris et volutpat enim. Sed iaculis augue faucibus eros tempor maximus. Nulla vestibulum est ante, nec semper velit molestie et. Curabitur rutrum, neque vel dictum facilisis, ante sapien volutpat nibh, at accumsan dui elit nec arcu. Nullam interdum odio ac ullamcorper ornare. Etiam eleifend libero a libero condimentum, eget cursus tortor tempor. Sed porttitor fringilla magna.
+				</p>
+			</section>
+		</div>
+			
+		<div id="div3" class="col-lg-4 col-sm-12">
+
+			<section>
+				<h2 id="three">Sushi</h2>				
+				<p>Mauris mollis egestas rhoncus. Ut molestie mauris pharetra tortor sagittis finibus. Nulla dictum condimentum metus, et tristique dolor posuere quis. Cras dui sapien, condimentum et nisi vel, malesuada vulputate arcu. Vivamus dapibus vehicula mi, mollis rhoncus velit gravida at. Nulla sit amet fringilla augue, eget tincidunt est. Curabitur porta consectetur pharetra. Praesent luctus eros velit, a dictum justo ullamcorper ac. Nam euismod finibus sagittis.
+				</p>
+			</section>
+		</div>
+	</div>	
 </body>
 </html>
